--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Beets Web Page</title>
   <meta name="viewport" content="width=device-width,intial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700|PT+Serif:400,700" rel="stylesheet">
 </head>
 <body>
 
