styled nav, image, figure

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
 
   <header>
-    <h1>Beetroot<i>Beta vulgaris</i></h1>
+    <h1>Beetroot (<i>Beta vulgaris</i>)</h1>
 
     <nav>
       <ol>
-        <li><a href="#common">common varities</a></li>
-        <li><a href="#nutrition">nutritional information</a></li>
+        <li><a href="#common">Common varities</a></li>
+        <li><a href="#nutrition">Nutritional information</a></li>
         <li><a href="#tags">Tags</a></li>
       </ol>
     </nav>
