--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <p>In fact, <cite>Jim Halpert</cite> once said this about beets,<q>"Fact, bears eat beets. Bears, beets,<i>Battlestar Galactica</i>"</q>.</p>
 
     <blockquote>
-      <p>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong> Show me a salade bar and I will clean them out of thier beets.</p>
+      <p class="quote">I have some <em>weird</em> habits. For instance, <strong>I love beets</strong> Show me a salade bar and I will clean them out of thier beets.</p>
       <footer>— <cite>Chris Pratt</cite></footer>
     </blockquote>
 
